--- a/src/components/head/ThemeSwitcher.astro
+++ b/src/components/head/ThemeSwitcher.astro
@@ -13,9 +13,9 @@ document.addEventListener('astro:page-load', () => {
   const logos = document.querySelectorAll('[id="logo"]');
 
   // Установка темы по умолчанию
-  let defaultTheme = 'dracula';
+  let defaultTheme = 'sunset';
   if (window.matchMedia && window.matchMedia('(prefers-color-scheme: light)').matches) {
-    defaultTheme = 'cupcake';
+    defaultTheme = 'light';
   }
 
   // Проверка cookies
@@ -25,21 +25,21 @@ document.addEventListener('astro:page-load', () => {
   }
 
   document.documentElement.setAttribute('data-theme', defaultTheme);
-  themeSwitcher.checked = defaultTheme === 'cupcake';
+  themeSwitcher.checked = defaultTheme === 'light';
 
   // Установка логотипов в зависимости от темы
   logos.forEach(logo => {
-    logo.src = defaultTheme === 'cupcake' ? '/src/images/logo-dark.png' : '/src/images/logo.png';
+    logo.src = defaultTheme === 'light' ? '/src/images/logo-dark.png' : '/src/images/logo.png';
   });
 
   themeSwitcher.addEventListener('change', function (event) {
     let theme;
     if (event.target.checked) {
       // Если переключатель включен, устанавливаем светлую тему
-      theme = 'cupcake';
+      theme = 'light';
     } else {
       // Если переключатель выключен, устанавливаем темную тему
-      theme = 'dracula';
+      theme = 'sunset';
     }
 
     // Установка темы и обновление логотипов
@@ -47,7 +47,7 @@ document.addEventListener('astro:page-load', () => {
     document.cookie = `theme=${theme}; expires=Fri, 31 Dec 9999 23:59:59 GMT`;
 
     logos.forEach(logo => {
-      logo.src = theme === 'cupcake' ? '/src/images/logo-dark.png' : '/src/images/logo.png';
+      logo.src = theme === 'light' ? '/src/images/logo-dark.png' : '/src/images/logo.png';
     });
   });
 });
