--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,7 @@ const { title = 'VRATSKYI' } = Astro.props;
 ---
 
 <!doctype html>
-<html lang={lang} data-theme="dracula">
+<html lang={lang} data-theme="sunset">
   <Head title={title} />
   <body class="mx-auto min-w-full cursor-default prose subpixel-antialiased"> 
         <Header transition:persist />
