--- a/src/pages/ru/portfolio/index.astro
+++ b/src/pages/ru/portfolio/index.astro
@@ -129,7 +129,7 @@ const t = useTranslations(lang);
     </div>
     
     <div class="grid place-items-center place-content-center prose lg:prose-xl text-center mx-auto mb-10">
-      <h2>Все проекты</h2>
+      <h2 class="font-black text-primary not-prose text-6xl mb-5">Все проекты</h2>
       <p>
         Тут представлены все мои проекты, как коммерчиские так и персональные. <br />
         Так-же можете глянуть мой <a class="link link-primary" href="https://www.behance.net/alexvracky" target="_blank">behance</a>
