--- a/src/pages/ru/services/index.astro
+++ b/src/pages/ru/services/index.astro
@@ -13,7 +13,7 @@ const t = useTranslations(lang);
     <div class="mx-auto w-full max-w-[1024px]">
     <div class="absolute top-0 left-0 right-0 bottom-0 bg-grid z-[-1]"></div>
 
-    <section class="w-full min-w-full max-w-[1024px] mt-[80px] lg:mt-[150px] rounded-box p-5 lg:p-20 grid overflow-hidden isolate relative h-svh">
+    <section class="w-full min-w-full max-w-[1024px] mt-[80px] lg:mt-[150px] rounded-box p-5 lg:p-20 grid overflow-hidden isolate relative lg:h-svh">
       <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
         <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.05]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
       </div>
@@ -57,22 +57,34 @@ const t = useTranslations(lang);
     
     </section>
 
-    <div class="py-24 sm:py-32">
-      <div class="mx-auto max-w-7xl px-6 lg:px-8">
-        <div class="mx-auto lg:text-center not-prose">
-          <h3 class="text-base font-semibold leading-7 text-primary">Не беспокойнеть о мелочах</h3>
-          <h2 class="mt-2 text-6xl font-bold tracking-tight">Забудьте о технических терминах, просто скажите чего вы хотите</h2>
-          <p class="mt-6 text-lg leading-8">
-            Сосредоточьтесь не на том как, а на том что вы хотите, расскажите о своей идее в деталях и я помогу вам развить ее, 
-            возможно у вас уже есть готовый бизнес и вы бы хотели привлечь больше клиентов или обновить дизайн, 
-            уверен мы сможем воплотить Ваши задумки в жизнь.
-          </p>
+    <div class="mx-auto not-prose lg:h-svh text-center grid place-content-center place-items-center">
+      <div class="relative isolate">
+        <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
+          <div class="aspect-[1397/845] w-[38.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.3]" style="clip-path: polygon(85.5% 40.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 87.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%)"></div>
         </div>
+        <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
+          <div class="aspect-[543/845] w-[28.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.3]" style="clip-path: polygon(85.5% 40.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 87.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%)"></div>
+        </div>
+      </div>
+      <h3 class="text-base font-semibold leading-7 text-primary">Не беспокойнеть о мелочах</h3>
+      <h2 class="mt-2 text-6xl font-bold tracking-tight">Забудьте о технических терминах, просто скажите чего вы хотите</h2>
+      <p class="mt-6 text-lg leading-8">
+        Сосредоточьтесь не на том как, а на том что вы хотите, расскажите о своей идее в деталях и я помогу вам развить ее, 
+        возможно у вас уже есть готовый бизнес и вы бы хотели привлечь больше клиентов или обновить дизайн, 
+        уверен мы сможем воплотить Ваши задумки в жизнь.
+      </p>
+    </div>
+
+    <div class="py-24 sm:py-32 lg:h-svh grid place-content-center place-items-center">
+      <div class="mx-auto max-w-7xl px-6 lg:px-8">
         <div class="mx-auto mt-16 sm:mt-20 lg:mt-24">
+          <div class="text-center mb-24">
+            <h2 class="text-6xl font-black tracking-tight not-prose text-primary">Что вы получите работая со мной</h2>
+          </div>
           <dl class="grid grid-cols-1 gap-x-8 gap-y-10 place-content-stretch lg:max-w-none lg:grid-cols-2 lg:gap-y-16">
               <div class="overflow-hidden isolate relative p-10 rounded-box backdrop-blur-3xl not-prose">
-                <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-secondary">
-                  <svg class="w-6 h-6 inline-block" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 48 48">
+                <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-base-100">
+                  <svg class="w-8 h-8 inline-block" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 48 48">
                     <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" d="M41.4 26.829a3.618 3.618 0 0 0 .699-4.142c-1.356-2.795-3.577-6.44-6.936-9.858a33.503 33.503 0 0 0-9.932-7.004c-1.366-.632-2.98-.32-4.045.744L9.172 18.583a3.62 3.62 0 0 0 0 5.12l5.047 5.047l-7.545 7.544c-1.36 1.36-1.56 3.598-.273 5.027a3.552 3.552 0 0 0 5.155.139l7.686-7.687l5.048 5.047a3.62 3.62 0 0 0 5.119 0zM13.489 14.265l20.238 20.237" />
                   </svg>
               </div>
@@ -91,10 +103,11 @@ const t = useTranslations(lang);
               </dd>
             </div>
             <div class="overflow-hidden isolate relative p-10 rounded-box backdrop-blur-3xl not-prose">
-              <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-secondary">
-                <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M12 16.5V9.75m0 0l3 3m-3-3l-3 3M6.75 19.5a4.5 4.5 0 01-1.41-8.775 5.25 5.25 0 0110.233-2.33 3 3 0 013.758 3.848A3.752 3.752 0 0118 19.5H6.75z" />
-              </svg>
+              <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-base-100">
+                <svg class="w-8 h-8 inline-block" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 48 48">
+                  <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" d="M22.2 4.86L6.69 11.25V27C6.69 35.44 24 43.5 24 43.5S41.31 35.44 41.31 27V11.25L25.8 4.86a4.68 4.68 0 0 0-3.6 0" />
+                  <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" d="M30.45 20.7H24v-8.92L17.69 25h6.45v8.92z" />
+                </svg>
             </div>
               <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
                 <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.3]" style="clip-path: polygon(85.5% 40.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 87.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%)"></div>
@@ -112,10 +125,11 @@ const t = useTranslations(lang);
             </dd>
           </div>
           <div class="overflow-hidden isolate relative p-10 rounded-box backdrop-blur-3xl not-prose">
-            <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-secondary">
-              <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M12 16.5V9.75m0 0l3 3m-3-3l-3 3M6.75 19.5a4.5 4.5 0 01-1.41-8.775 5.25 5.25 0 0110.233-2.33 3 3 0 013.758 3.848A3.752 3.752 0 0118 19.5H6.75z" />
-            </svg>
+            <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-base-100">
+              <svg class="w-8 h-8 inline-block" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 512 512">
+                <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="10" d="M344 144c-3.92 52.87-44 96-88 96s-84.15-43.12-88-96c-4-55 35-96 88-96s92 42 88 96" />
+                <path fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="10" d="M256 304c-87 0-175.3 48-191.64 138.6C62.39 453.52 68.57 464 80 464h352c11.44 0 17.62-10.48 15.65-21.4C431.3 352 343 304 256 304Z" />
+              </svg>
           </div>
             <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
               <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.3]" style="clip-path: polygon(85.5% 40.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 87.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%)"></div>
@@ -133,10 +147,10 @@ const t = useTranslations(lang);
           </dd>
         </div>
         <div class="overflow-hidden isolate relative p-10 rounded-box backdrop-blur-3xl not-prose">
-          <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-secondary">
-            <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M12 16.5V9.75m0 0l3 3m-3-3l-3 3M6.75 19.5a4.5 4.5 0 01-1.41-8.775 5.25 5.25 0 0110.233-2.33 3 3 0 013.758 3.848A3.752 3.752 0 0118 19.5H6.75z" />
-          </svg>
+          <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-base-100">
+            <svg class="w-8 h-8 inline-block" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
+              <path fill="none" stroke="currentColor" stroke-width="0.3" d="M4.222 19.778c4.296 4.296 11.26 4.296 15.556 0c4.296-4.296 4.296-11.26 0-15.556c-4.296-4.296-11.26-4.296-15.556 0c-4.296 4.296-4.296 11.26 0 15.556ZM6.343 21.9l4.243-4.242m-8.485 0l4.242-4.243m11.314-2.828l4.242-4.243m-8.485 0l4.243-4.242m-9.9 14.142a6 6 0 1 0 8.486-8.486a6 6 0 0 0-8.486 8.486Zm-5.656-9.9l4.242 4.243m0-8.485l4.243 4.242m2.828 11.314l4.243 4.242m0-8.485l4.242 4.243" />
+            </svg>
         </div>
           <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
             <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.3]" style="clip-path: polygon(85.5% 40.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 87.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%)"></div>
@@ -161,7 +175,7 @@ const t = useTranslations(lang);
 
 
           <div class="mx-auto sm:text-center not-prose mt-44">
-            <h2 class="text-6xl font-bold tracking-tight text-primary">Прозрачнее чем когда либо</h2>
+            <h2 class="text-6xl font-black tracking-tight text-primary">Прозрачнее чем когда либо</h2>
             <p class="mt-6 text-lg leading-8">Цены которые не пугают своими <span class="uppercase font-black">размерами,</span> заказывая услугу вы автоматически соглашаетесь с условиями <a class="link link-primary" href="#">сотрудничества.</a></p>
             
           </div>
