--- a/src/pages/ua/portfolio/h2ovoda.astro
+++ b/src/pages/ua/portfolio/h2ovoda.astro
@@ -65,7 +65,7 @@ const t = useTranslations(lang);
                 Сайт имеет привлекательный дизайн, удобную верстку и простую интеграцию с аналитическими инструментами для повышения вовлеченности клиентов. 
                 Пользователи могут легко отправить заявку на доставку воды через форму заказа и получить удобный доступ к бутилированной питьевой воде.
             </p>
-            <div class="grid grid-flow-col gap-x-5 place-content-center place-items-start mt-10 bg-base-200/50 backdrop-blur-3xl rounded-box p-5 lg:p-10">
+            <div class="grid grid-flow-col gap-x-5 place-content-center place-items-start mt-10 bg-base-200/20 backdrop-blur-3xl rounded-box p-5 lg:p-10">
                 <div class="grid place-items-center">
                   <svg class="inline-block w-8 h-8 text-primary" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                     <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M10 3H8a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-2m-4 0h4m-4 0v1m4-1v1m0 0a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v0m4 0h-4m2 10.008" />
@@ -150,7 +150,7 @@ const t = useTranslations(lang);
                       <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://h2ovoda.com.ua" target="_blank">https://h2ovoda.com.ua</a></div>
                     </div>
                     <div class="flex justify-center bg-base-200">
-                        <Image src={h2ovoda} class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='H2O Вода' width='600' height='400' />
+                        <Image src={h2ovoda} transition:name='Сайт доставки воды 2.0' class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='Сайт доставки воды 2.0' width='600' height='400' />
                     </div>
                   </div>
             </div>
