--- a/src/pages/ua/portfolio/index.astro
+++ b/src/pages/ua/portfolio/index.astro
@@ -28,19 +28,17 @@ const t = useTranslations(lang);
         <div class="grid lg:grid-flow-col gap-x-20 place-content-center place-items-start mt-[60px] lg:mt-[200px] p-5 md:p-0">
 
             <div class="p-5">
-                <h1 class="relative">Последний проект <span class="badge badge-primary text-xs absolute top-0 ml-3">новый</span>
+                <h1 class="relative">{t('portfolio.main.title')} <span class="badge badge-primary text-xs absolute top-0 ml-3">{t('portfolio.main.title.label')}</span>
             </h1>
             <p class="prose">
-                Сайт для доставки воды по Белогородке и соседних 
-                районах обновлен с привлекательным дизайном, 
-                удобным заказом и интеграцией аналитики для вовлечения клиентов.
+              {t('portfolio.main.description')}
             </p>
-            <div class="grid grid-flow-col gap-x-5 place-content-center place-items-start mt-10 bg-base-200/50 backdrop-blur-3xl rounded-box p-5 lg:p-10">
+            <div class="grid grid-flow-col gap-x-5 place-content-center place-items-start mt-10 bg-base-200/20 backdrop-blur-3xl rounded-box p-5 lg:p-10">
                 <div class="grid place-items-center">
                   <svg class="inline-block w-8 h-8 text-primary" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                     <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M10 3H8a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-2m-4 0h4m-4 0v1m4-1v1m0 0a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v0m4 0h-4m2 10.008" />
                   </svg>
-                    <p class="text-xs">Адаптивный</p>
+                    <p class="text-xs">{t('portfolio.project.futures.1')}</p>
                 </div>
                 <div class="divider divider-horizontal"></div>
                 <div class="grid place-items-center">
@@ -62,14 +60,14 @@ const t = useTranslations(lang);
                         </mask>
                         <rect width="24" height="24" fill="currentColor" mask="url(#lineMdSpeedLoop0)" />
                       </svg>
-                    <p class="text-xs">Оптимизированный</p>
+                    <p class="text-xs">{t('portfolio.project.futures.2')}</p>
                 </div>
                 <div class="divider divider-horizontal"></div>
                 <div class="grid place-items-center">
                     <svg class="inline-block w-8 h-8 text-primary" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 15 15">
                         <path fill="currentColor" fill-rule="evenodd" d="M3.88 1h7.24c.403 0 .735 0 1.006.022c.281.023.54.072.782.196a2 2 0 0 1 .874.874c.124.243.173.501.196.782c.022.27.022.603.022 1.005v7.241c0 .403 0 .735-.022 1.006c-.023.281-.072.54-.196.782a2 2 0 0 1-.874.874c-.243.124-.501.173-.782.196c-.27.022-.603.022-1.005.022H3.88c-.403 0-.735 0-1.006-.022c-.281-.023-.54-.072-.782-.196a2 2 0 0 1-.874-.874c-.124-.243-.173-.501-.196-.782C1 11.856 1 11.523 1 11.12V3.88c0-.403 0-.735.022-1.006c.023-.281.072-.54.196-.782a2 2 0 0 1 .874-.874c.243-.124.501-.173.782-.196C3.144 1 3.477 1 3.88 1m-.924 1.019c-.22.018-.332.05-.41.09a1 1 0 0 0-.437.437c-.04.078-.072.19-.09.41C2 3.18 2 3.472 2 3.9V7h5V2H3.9c-.428 0-.72 0-.944.019M7 8H2v3.1c0 .428 0 .72.019.944c.018.22.05.332.09.41a1 1 0 0 0 .437.437c.078.04.19.072.41.09c.225.019.516.019.944.019H7zm1 0h5v3.1c0 .428 0 .72-.019.944c-.018.22-.05.332-.09.41a1 1 0 0 1-.437.437c-.078.04-.19.072-.41.09c-.225.019-.516.019-.944.019H8zm5-1H8V2h3.1c.428 0 .72 0 .944.019c.22.018.332.05.41.09a1 1 0 0 1 .437.437c.04.078.072.19.09.41c.019.225.019.516.019.944z" clip-rule="evenodd" />
                     </svg>
-                    <p class="text-xs">Функциональный</p>
+                    <p class="text-xs">{t('portfolio.project.futures.3')}</p>
                 </div>
             </div>
             <div class="grid grid-flow-col gap-x-10 place-content-center place-items-center mt-10">
@@ -129,12 +127,11 @@ const t = useTranslations(lang);
     </div>
     
     <div class="grid place-items-center place-content-center prose lg:prose-xl text-center mx-auto mb-10">
-      <h2>Все проекты</h2>
+      <h2 class="font-black text-primary not-prose text-6xl mb-5">{t('portfolio.title')}</h2>
       <p>
-        Тут представлены все мои проекты, как коммерчиские так и персональные. <br />
-        Так-же можете глянуть мой <a class="link link-primary" href="https://www.behance.net/alexvracky" target="_blank">behance</a>
+        {t('portfolio.subdesc')} <br />
       </p>
-      
+      <p class="not-prose" set:html={t('portfolio.description')}></p>
     </div>
 
 
@@ -142,17 +139,17 @@ const t = useTranslations(lang);
       <PortfolioCard 
       image={{
          src: h2ovoda,
-         alt: "Сайт доставки воды 2.0",
+         alt: `${t('portfolio.card.1.title')}`,
       }},
-      label='коммерчиский сайт'
-      title='Сайт доставки воды 2.0'
-      description='Сайт для доставки воды по Белогородке и соседних районах обновлен с привлекательным дизайном, удобным заказом и интеграцией аналитики для вовлечения клиентов.'
+      label={t('portfolio.card.1.label')}
+      title={t('portfolio.card.1.title')}
+      description={t('portfolio.card.1.description')}
       activeButton={{ 
-        title: 'Подробнее',
+        title: `${t('portfolio.card.1.activeButton')}`,
         link: `/${lang}/portfolio/h2ovoda`
       }},
       exturnalButton={{ 
-        title: 'Смотреть проект',
+        title: `${t('portfolio.card.1.exturnalButton')}`,
         link: 'https://h2ovoda.com.ua/'
       }}
        />
@@ -160,35 +157,35 @@ const t = useTranslations(lang);
        <PortfolioCard 
        image={{
           src: vratskyiBlog,
-          alt: "Персональный блог и портфолио",
+          alt: `${t('portfolio.card.1.title')}`,
        }},
-       label='персональный сайт'
-       title='Персональный блог и портфолио'
-       description='Этот бесплатный шаблон для последней версии Astro обеспечивает удобство использования и многофункциональность для демонстрации портфолио и создания блога'
+       label={t('portfolio.card.2.label')}
+       title={t('portfolio.card.2.title')}
+       description={t('portfolio.card.2.description')}
        activeButton={{ 
-         title: 'Подробнее',
+         title: `${t('portfolio.card.2.activeButton')}`,
          link: `/${lang}/portfolio/vratskyi-blog`
        }},
        exturnalButton={{ 
-         title: 'Смотреть проект',
-         link: 'https://byshikat.com/'
+         title: `${t('portfolio.card.2.exturnalButton')}`,
+         link: 'https://vratskyi.pages.dev/en/'
        }}
         />
 
         <PortfolioCard 
         image={{
            src: h2ovodaOld,
-           alt: "Сайт доставки воды 1.0",
+           alt: `${t('portfolio.card.3.title')}`,
         }},
-        label='коммерчиский сайт'
-        title='Сайт доставки воды 1.0'
-        description='Сайт для доставки воды в Белогородке обладает стильным дизайном, удобной навигацией и интеграцией с аналитикой для привлечения клиентов. Посетители могут оставить заказ через форму и получить воду.'
+        label={t('portfolio.card.3.label')}
+        title={t('portfolio.card.3.title')}
+        description={t('portfolio.card.3.description')}
         activeButton={{ 
-          title: 'Подробнее',
+          title: `${t('portfolio.card.3.activeButton')}`,
           link: `/${lang}/portfolio/h2ovoda-old`
         }},
         exturnalButton={{ 
-          title: 'Смотреть проект',
+          title: `${t('portfolio.card.3.exturnalButton')}`,
           link: 'https://old.h2ovoda.com.ua/'
         }}
          />
@@ -196,17 +193,17 @@ const t = useTranslations(lang);
          <PortfolioCard 
          image={{
             src: byshikat,
-            alt: "Byshikat интернет-магазин обуви",
+            alt: `${t('portfolio.card.4.title')}`,
          }},
-         label='коммерчиский сайт'
-         title='Byshikat интернет-магазин обуви'
-         description='Исследовав аудиторию, я понял, что нужно реализовать подход, аналогичный Instagram, с похожим дизайном. Продажи из Instagram-магазина перешли в интернет-магазин и выросли на 1000%.'
+         label={t('portfolio.card.4.label')}
+         title={t('portfolio.card.4.title')}
+         description={t('portfolio.card.4.description')}
          activeButton={{ 
-           title: 'Подробнее',
+           title: `${t('portfolio.card.4.activeButton')}`,
            link: `/${lang}/portfolio/byshikat`
          }},
          exturnalButton={{ 
-           title: 'Смотреть проект',
+           title: `${t('portfolio.card.4.exturnalButton')}`,
            link: 'https://byshikat.com/'
          }}
           />
@@ -214,17 +211,17 @@ const t = useTranslations(lang);
           <PortfolioCard 
           image={{
              src: lmdlviv,
-             alt: "Бумажные подарочные пакеты",
+             alt: `${t('portfolio.card.5.title')}`,
           }},
-          label='коммерчиский сайт'
-          title='Бумажные подарочные пакеты'
-          description='Этот интернет-магазин на WordPress и WooCommerce был обновлен с улучшенным дизайном и скоростью загрузки. Благодаря этому увеличилось количество посетителей и продаж. Теперь сайт лидирует в Google по Украине.'
+          label={t('portfolio.card.5.label')}
+          title={t('portfolio.card.5.title')}
+          description={t('portfolio.card.5.description')}
           activeButton={{ 
-            title: 'Подробнее',
+            title: `${t('portfolio.card.5.activeButton')}`,
             link: `/${lang}/portfolio/lmdlvivua`
           }},
           exturnalButton={{ 
-            title: 'Смотреть проект',
+            title: `${t('portfolio.card.5.exturnalButton')}`,
             link: 'https://lmd.lviv.ua/'
           }}
            />
