--- a/src/pages/ru/services/index.astro
+++ b/src/pages/ru/services/index.astro
@@ -171,7 +171,7 @@ const t = useTranslations(lang);
             <div role="tablist" class="tabs tabs-bordered">
               <input type="radio" name="my_tabs_1" role="tab" class="tab !w-[180px] grid place-content-center" aria-label="Разработка сайтов с нуля" checked/>
 
-              <div role="tabpanel" class="tab-content p-10" transition:animate="slide">
+              <div role="tabpanel" class="tab-content p-10">
                 <div class="mb-24">
                   <div class="mx-auto mt-10 p-5 flex-row w-full rounded-box sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
                     <div class="p-8 sm:p-10 grid grid-flow-row isolate relative overflow-hidden rounded-box">
@@ -294,10 +294,10 @@ const t = useTranslations(lang);
               </div>
             
               <input type="radio" name="my_tabs_1" role="tab" class="tab !w-[230px]" aria-label="Разработка сайтов на WordPress" />
-              <div role="tabpanel" class="tab-content p-10" transition:animate="slide">Прайс для разработки на WordPress</div>
+              <div role="tabpanel" class="tab-content p-10">Прайс для разработки на WordPress</div>
 
               <input type="radio" name="my_tabs_1" role="tab" class="tab !w-[190px]" aria-label="Разработка telegram ботов" />
-              <div role="tabpanel" class="tab-content p-10" transition:animate="slide">Прайс для разработки telegram ботов</div>
+              <div role="tabpanel" class="tab-content p-10">Прайс для разработки telegram ботов</div>
             </div>
           </div>
 
