--- a/src/pages/ru/services/index.astro
+++ b/src/pages/ru/services/index.astro
@@ -169,7 +169,7 @@ const t = useTranslations(lang);
 
           <div class="mt-10">
             <div role="tablist" class="tabs tabs-bordered">
-              <input type="radio" name="my_tabs_1" role="tab" class="tab !w-[180px] grid place-content-center" aria-label="Разработка сайтов с нуля" checked/>
+              <input type="radio" name="my_tabs_1" role="tab" class="tab !w-[180px]" aria-label="Разработка сайта с нуля" checked/>
 
               <div role="tabpanel" class="tab-content p-10">
                 <div class="mb-24">
@@ -293,7 +293,7 @@ const t = useTranslations(lang);
                 </div>
               </div>
             
-              <input type="radio" name="my_tabs_1" role="tab" class="tab !w-[230px]" aria-label="Разработка сайтов на WordPress" />
+              <input type="radio" name="my_tabs_1" role="tab" class="tab !w-[230px]" aria-label="Разработка сайта на WordPress" />
               <div role="tabpanel" class="tab-content p-10">Прайс для разработки на WordPress</div>
 
               <input type="radio" name="my_tabs_1" role="tab" class="tab !w-[190px]" aria-label="Разработка telegram ботов" />
@@ -314,7 +314,7 @@ const t = useTranslations(lang);
               </div>
             </div>
             <div class="grid place-content-center place-items-center gap-y-5">
-              <h3 class="text-lg tracking-tight text-primary">платите по мере роста проекта</h3>
+              <h3 class="text-lg tracking-tight text-primary">расширяйте функционал по мере роста проекта</h3>
               <h2 class="text-7xl font-black tracking-tight not-prose mb-5">Ничего не подошло ?</h2>
               <p class="text-center max-w-4xl">
                 Специально для вас есть отличное предложение, мы разрабатываем для вас базовую версию проекта, 
