--- a/src/pages/ru/services/index.astro
+++ b/src/pages/ru/services/index.astro
@@ -9,7 +9,7 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<Layout title={t('nav.services')}>
+<Layout title=`${t('nav.services')} - VRATSKYI`>
     <div class="mx-auto w-full max-w-[1024px]">
     <div class="absolute top-0 left-0 right-0 bottom-0 bg-grid z-[-1]"></div>
 
