--- a/src/pages/ru/services/index.astro
+++ b/src/pages/ru/services/index.astro
@@ -188,7 +188,7 @@ const t = useTranslations(lang);
                       <div class="flex items-center gap-x-4">
                         <h4 class="flex-none text-sm font-semibold leading-6 text-primary">{t('service.price.card.1.futures.title')}</h4>
                       </div>
-                      <ul role="list" class="grid grid-flow-row gap-4 text-sm leading-6 sm:grid-cols-2 sm:gap-6">
+                      <ul role="list" class="grid grid-flow-row gap-4 text-sm leading-6 sm:grid-cols-2 sm:gap-6s">
                         <li class="flex gap-x-3">
                           <svg class="h-6 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                             <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
@@ -205,7 +205,7 @@ const t = useTranslations(lang);
                           <svg class="h-6 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                             <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                           </svg>
-                         <span class="tooltip tooltip-bottom hover:cursor-pointer" data-tip={t('service.price.card.1.futures.description.3')}>{t('service.price.card.1.futures.title.3')}</span>
+                         <span class="tooltip tooltip-bottom hover:cursor-pointer text-left" data-tip={t('service.price.card.1.futures.description.3')}>{t('service.price.card.1.futures.title.3')}</span>
                         </li>
                         <li class="flex gap-x-3">
                           <svg class="h-6 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -266,12 +266,6 @@ const t = useTranslations(lang);
                           </svg>
                          <span class="tooltip tooltip-bottom hover:cursor-pointer" data-tip={t('service.price.card.2.futures.description.3')}>{t('service.price.card.2.futures.title.3')}</span>
                         </li>
-                        <li class="flex gap-x-3">
-                          <svg class="h-6 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                            <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
-                          </svg>
-                         <span class="tooltip tooltip-bottom hover:cursor-pointer" data-tip={t('service.price.card.2.futures.description.4')}>{t('service.price.card.2.futures.title.4')}</span>
-                        </li>
                       </ul>
                     </div>
                     <div class="-mt-2 p-2 lg:mt-0 lg:w-full lg:max-w-md lg:flex-shrink-0 rounded-box">
@@ -298,6 +292,9 @@ const t = useTranslations(lang);
 
               <input type="radio" name="my_tabs_1" role="tab" class="tab !w-[190px]" aria-label="Разработка telegram ботов" />
               <div role="tabpanel" class="tab-content p-10">Прайс для разработки telegram ботов</div>
+
+              <input type="radio" name="my_tabs_1" role="tab" class="tab !w-[190px]" aria-label="Другие услуги" />
+              <div role="tabpanel" class="tab-content p-10">Расширенные функции для сайта / интеграции с cms и checkbox</div>
             </div>
           </div>
 
